<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_make_you_an_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_below"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20.0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="66dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:hint="NAME"
        android:background="@drawable/rectangle_1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="161dp"
        android:autofillHints=""
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:background="@drawable/rectangle_1"
        android:hint="@string/email"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="227dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:background="@drawable/rectangle_1"
        android:hint="PASSWORD"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="292dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/button"
        android:layout_width="114dp"
        android:layout_height="42dp"
        android:background="@drawable/submit_pill_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="409dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_lock_green"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="304dp"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_email_green"
        tools:layout_editor_absoluteY="236dp"
        android:contentDescription="TODO"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_account_box_black_24dp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="173dp"
        android:contentDescription="TODO"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20.0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="382dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_sign_in_here"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20.0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="551dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>